setup/manifests/base/turn/turn-daemonset.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: turn
spec:
  selector:
    matchLabels:
      app: turn
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: turn
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      hostNetwork: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app.broker/gke-turn
                    operator: In
                    values: ["true"]
      tolerations:
        - key: "app.broker/gke-turn"
          effect: "NoSchedule"
          operator: "Exists"
      containers:
        ###
        # coturn container
        ###
        - name: coturn
          image: gcr.io/cloud-solutions-images/kube-pod-broker-coturn:latest
          imagePullPolicy: Always
        - name: web
          image: gcr.io/cloud-solutions-images/kube-pod-broker-coturn-web:latest
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8088
