setup/manifests/base/turn/turn-web-aggregator-deploy.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: turn-web-aggregator
  namespace: pod-broker-system
  labels:
    app: turn-web-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turn-web-aggregator
  template:
    metadata:
      labels:
        app: turn-web-aggregator
    spec:
      serviceAccount: pod-broker
      terminationGracePeriodSeconds: 10
      containers:
        ###
        # HTTP api for serving aggregated json RTC configs.
        ###
        - name: web
          image: gcr.io/cloud-solutions-images/kube-pod-broker-coturn-web:latest
          readinessProbe:
            tcpSocket:
              port: 8080
          ports:
            - name: rest
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
        ###
        # TURN node watcher sidecar
        # Updates Endpoints object with node external IP for DNS discovery.
        ###
        - name: node-watcher
          image: gcr.io/cloud-solutions-images/kube-pod-broker-coturn-web:latest
          command: ["/node_watcher.sh"]
          resources:
            requests:
              cpu: 60m
              memory: 64Mi
