setup/manifests/base/turn/turn-discovery-service.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Headless and selector-less service.
# Endpoints are added dynamically by turn-web-aggregator node-watcher container sidecar.
# Web aggregator container looks up all available TURN nodes using headless service DNS SRV query.
apiVersion: v1
kind: Service
metadata:
  name: turn-discovery
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: turn
      port: 3478
      targetPort: 3478
  selector: {}
