setup/manifests/base/turn/turn-web-virtualservice.yaml
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: turn
spec:
  hosts:
    - "*"
  gateways:
    - pod-broker-gateway
  http:
    - match:
        - uri:
            prefix: /turn/
      rewrite:
        uri: /
      route:
        - destination:
            host: turn
            port:
              number: 80
